@@ -1,3 +1,7 @@
+2002-05-30  Jesper Skov  <jskov@redhat.com>
+
+	* src/dns.c: fixed index->ptdindex oversight.
+
 2002-05-24  Jonathan Larmour  <jlarmour@redhat.com>
 
 	* src/dns.c (free_hent): Actually free hent itself!
